feat: Optimize fetching latest job runs by using a single batch query and update RunRepository to return Slice.